--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -39,6 +39,8 @@ jobs:
                 scan-ref: ${{ steps.build.outputs.imageid }}
                 output: trivy-results.sarif
                 format: sarif
+                severity: HIGH,CRITICAL
+                exit-code: 1
 
             - name: Upload Trivy scan results to GitHub Security tab
               uses: github/codeql-action/upload-sarif@v3
